--- a/Dijkstra.ipynb
+++ b/Dijkstra.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import heapq\n",
     "import numpy as np\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "import time"
    ]
   },
   {
@@ -18,17 +19,17 @@
    "outputs": [],
    "source": [
     "# DANGER\n",
-    "with open(\"tests/test3_new.txt\") as f:\n",
-    "    test3 = f.read().splitlines()"
+    "#with open(\"tests/test3_new.txt\") as f:\n",
+    "#    test3 = f.read().splitlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"tests/test3_new.txt\") as f:\n",
+    "with open(\"tests/test2_new.txt\") as f:\n",
     "    lines = f.read().splitlines()\n",
     "\n",
     "number_of_vertices = int(lines[0])\n",
@@ -51,50 +52,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dijkstra(G, source):\n",
+    "    \n",
+    "    #start_time = time.time()\n",
     "    costs = dict()\n",
     "    for i in range(number_of_vertices):\n",
     "        costs[i] = np.inf\n",
     "    costs[source] = 0\n",
+    "    #print(f\"Costs dict: {time.time() - start_time}\")\n",
     "    \n",
+    "    #start_time = time.time()\n",
     "    pq = []\n",
     "    \n",
     "    for node in G:\n",
     "        heapq.heappush(pq, (node, costs[node]))\n",
+    "    #print(f\"Heap Push: {time.time() - start_time}\")\n",
     "    \n",
+    "    \n",
+    "    #start_time = time.time()\n",
     "    while len(pq) != 0:\n",
     "        current_node, current_node_distance = heapq.heappop(pq)\n",
-    "        \n",
     "        for neighbor_node in G[current_node]:\n",
     "            weight = G[current_node][neighbor_node]\n",
     "            distance = current_node_distance + weight\n",
     "            if distance < costs[neighbor_node]:\n",
     "                costs[neighbor_node] = distance\n",
     "                heapq.heappush(pq, (neighbor_node, distance))\n",
+    "    #print(f\"While Pop: {time.time() - start_time}\")\n",
     "\n",
     "    return np.sum(np.array(list(costs.values())) * np.array(list(populations.values())))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Costs dict: 4.100799560546875e-05\n",
+      "Heap Push: 0.000102996826171875\n",
+      "While Pop: 0.025828838348388672\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "19102547"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "graph = G\n",
     "\n",
-    "#[dijkstra(graph, 0) for i in range(1000)]"
+    "dijkstra(graph, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Costs dict: 3.600120544433594e-05\n",
+      "Heap Push: 0.00012302398681640625\n",
+      "While Pop: 0.030699968338012695\n",
+      "Costs dict: 7.081031799316406e-05\n",
+      "Heap Push: 0.0001888275146484375\n",
+      "While Pop: 0.03852105140686035\n",
+      "Costs dict: 9.179115295410156e-05\n",
+      "Heap Push: 0.0002498626708984375\n",
+      "While Pop: 0.03175711631774902\n",
+      "Costs dict: 5.507469177246094e-05\n",
+      "Heap Push: 0.00019931793212890625\n",
+      "While Pop: 0.02501988410949707\n",
+      "Costs dict: 4.410743713378906e-05\n",
+      "Heap Push: 0.00012612342834472656\n",
+      "While Pop: 0.02934885025024414\n",
+      "Costs dict: 6.29425048828125e-05\n",
+      "Heap Push: 0.00012373924255371094\n",
+      "While Pop: 0.02836012840270996\n",
+      "Costs dict: 4.887580871582031e-05\n",
+      "Heap Push: 0.00022292137145996094\n",
+      "While Pop: 0.025456905364990234\n",
+      "Costs dict: 3.504753112792969e-05\n",
+      "Heap Push: 0.00011968612670898438\n",
+      "While Pop: 0.028050899505615234\n",
+      "Costs dict: 3.0040740966796875e-05\n",
+      "Heap Push: 0.00011610984802246094\n",
+      "While Pop: 0.029500961303710938\n",
+      "Costs dict: 5.1975250244140625e-05\n",
+      "Heap Push: 0.00017714500427246094\n",
+      "While Pop: 0.02493882179260254\n",
+      "Costs dict: 5.626678466796875e-05\n",
+      "Heap Push: 0.00014591217041015625\n",
+      "While Pop: 0.02528095245361328\n",
+      "Costs dict: 2.7179718017578125e-05\n",
+      "Heap Push: 0.00015592575073242188\n",
+      "While Pop: 0.02707982063293457\n",
+      "Costs dict: 3.3855438232421875e-05\n",
+      "Heap Push: 0.0001289844512939453\n",
+      "While Pop: 0.03270888328552246\n",
+      "Costs dict: 5.4836273193359375e-05\n",
+      "Heap Push: 0.0001971721649169922\n",
+      "While Pop: 0.02901601791381836\n",
+      "Costs dict: 4.38690185546875e-05\n",
+      "Heap Push: 0.00020122528076171875\n",
+      "While Pop: 0.03267312049865723\n",
+      "Costs dict: 5.316734313964844e-05\n",
+      "Heap Push: 0.0002110004425048828\n",
+      "While Pop: 0.031033039093017578\n",
+      "Costs dict: 4.8160552978515625e-05\n",
+      "Heap Push: 0.0001347064971923828\n",
+      "While Pop: 0.0287017822265625\n",
+      "Costs dict: 4.9114227294921875e-05\n",
+      "Heap Push: 0.0004017353057861328\n",
+      "While Pop: 0.0336451530456543\n",
+      "Costs dict: 6.985664367675781e-05\n",
+      "Heap Push: 0.0001957416534423828\n",
+      "While Pop: 0.03646206855773926\n",
+      "Costs dict: 3.314018249511719e-05\n",
+      "Heap Push: 0.0001289844512939453\n",
+      "While Pop: 0.03428292274475098\n",
+      "Costs dict: 7.605552673339844e-05\n",
+      "Heap Push: 0.0003001689910888672\n",
+      "While Pop: 0.03297090530395508\n",
+      "Costs dict: 7.224082946777344e-05\n",
+      "Heap Push: 0.00020885467529296875\n",
+      "While Pop: 0.02946305274963379\n",
+      "Costs dict: 4.076957702636719e-05\n",
+      "Heap Push: 0.0002048015594482422\n",
+      "While Pop: 0.03320908546447754\n",
+      "Costs dict: 6.29425048828125e-05\n",
+      "Heap Push: 0.00013017654418945312\n",
+      "While Pop: 0.027000904083251953\n",
+      "Costs dict: 4.673004150390625e-05\n",
+      "Heap Push: 0.00019407272338867188\n",
+      "While Pop: 0.025407791137695312\n",
+      "Costs dict: 5.0067901611328125e-05\n",
+      "Heap Push: 0.00019407272338867188\n",
+      "While Pop: 0.030025005340576172\n",
+      "Costs dict: 5.078315734863281e-05\n",
+      "Heap Push: 0.0001990795135498047\n",
+      "While Pop: 0.023271799087524414\n",
+      "Costs dict: 3.504753112792969e-05\n",
+      "Heap Push: 0.00011420249938964844\n",
+      "While Pop: 0.03405189514160156\n",
+      "Costs dict: 4.982948303222656e-05\n",
+      "Heap Push: 0.0002181529998779297\n",
+      "While Pop: 0.02992701530456543\n",
+      "Costs dict: 5.91278076171875e-05\n",
+      "Heap Push: 0.00020194053649902344\n",
+      "While Pop: 0.026019811630249023\n",
+      "Costs dict: 3.0040740966796875e-05\n",
+      "Heap Push: 0.00011086463928222656\n",
+      "While Pop: 0.02943897247314453\n",
+      "Costs dict: 7.915496826171875e-05\n",
+      "Heap Push: 0.00021696090698242188\n",
+      "While Pop: 0.027438879013061523\n",
+      "Costs dict: 4.1961669921875e-05\n",
+      "Heap Push: 0.0001621246337890625\n",
+      "While Pop: 0.024116992950439453\n",
+      "Costs dict: 2.7894973754882812e-05\n",
+      "Heap Push: 0.0001380443572998047\n",
+      "While Pop: 0.024363040924072266\n",
+      "Costs dict: 5.078315734863281e-05\n",
+      "Heap Push: 0.00018310546875\n",
+      "While Pop: 0.02211308479309082\n",
+      "Costs dict: 5.1975250244140625e-05\n",
+      "Heap Push: 0.0001938343048095703\n",
+      "While Pop: 0.022367000579833984\n",
+      "Costs dict: 5.602836608886719e-05\n",
+      "Heap Push: 0.00022721290588378906\n",
+      "While Pop: 0.03000807762145996\n",
+      "Costs dict: 6.604194641113281e-05\n",
+      "Heap Push: 0.00029397010803222656\n",
+      "While Pop: 0.025521039962768555\n",
+      "Costs dict: 3.0279159545898438e-05\n",
+      "Heap Push: 0.00015616416931152344\n",
+      "While Pop: 0.034642934799194336\n",
+      "Costs dict: 4.887580871582031e-05\n",
+      "Heap Push: 0.0002639293670654297\n",
+      "While Pop: 0.02727508544921875\n",
+      "Costs dict: 3.528594970703125e-05\n",
+      "Heap Push: 0.00011491775512695312\n",
+      "While Pop: 0.023279666900634766\n",
+      "Costs dict: 2.9087066650390625e-05\n",
+      "Heap Push: 0.00011587142944335938\n",
+      "While Pop: 0.02233600616455078\n",
+      "Costs dict: 2.9802322387695312e-05\n",
+      "Heap Push: 0.0001728534698486328\n",
+      "While Pop: 0.021303892135620117\n",
+      "Costs dict: 2.9087066650390625e-05\n",
+      "Heap Push: 0.0001800060272216797\n",
+      "While Pop: 0.023441791534423828\n",
+      "Costs dict: 5.412101745605469e-05\n",
+      "Heap Push: 0.00021076202392578125\n",
+      "While Pop: 0.027770280838012695\n",
+      "Costs dict: 2.9325485229492188e-05\n",
+      "Heap Push: 0.00011515617370605469\n",
+      "While Pop: 0.036618947982788086\n",
+      "Costs dict: 5.4836273193359375e-05\n",
+      "Heap Push: 0.0003230571746826172\n",
+      "While Pop: 0.030525922775268555\n",
+      "Costs dict: 3.409385681152344e-05\n",
+      "Heap Push: 0.00011301040649414062\n",
+      "While Pop: 0.027298927307128906\n",
+      "Costs dict: 5.078315734863281e-05\n",
+      "Heap Push: 0.00022721290588378906\n",
+      "While Pop: 0.02901911735534668\n",
+      "Costs dict: 5.698204040527344e-05\n",
+      "Heap Push: 0.0002231597900390625\n",
+      "While Pop: 0.03184318542480469\n",
+      "Costs dict: 3.314018249511719e-05\n",
+      "Heap Push: 0.00011014938354492188\n",
+      "While Pop: 0.02741718292236328\n",
+      "Costs dict: 3.0279159545898438e-05\n",
+      "Heap Push: 0.0001201629638671875\n",
+      "While Pop: 0.02905416488647461\n",
+      "Costs dict: 5.221366882324219e-05\n",
+      "Heap Push: 0.00018596649169921875\n",
+      "While Pop: 0.03181815147399902\n",
+      "Costs dict: 4.982948303222656e-05\n",
+      "Heap Push: 0.00025391578674316406\n",
+      "While Pop: 0.02939605712890625\n",
+      "Costs dict: 5.91278076171875e-05\n",
+      "Heap Push: 0.00032210350036621094\n",
+      "While Pop: 0.029996156692504883\n",
+      "Costs dict: 3.409385681152344e-05\n",
+      "Heap Push: 0.00010895729064941406\n",
+      "While Pop: 0.023644208908081055\n",
+      "Costs dict: 5.1975250244140625e-05\n",
+      "Heap Push: 0.00022292137145996094\n",
+      "While Pop: 0.031835079193115234\n",
+      "Costs dict: 0.00021004676818847656\n",
+      "Heap Push: 0.00020003318786621094\n",
+      "While Pop: 0.029787778854370117\n",
+      "Costs dict: 4.792213439941406e-05\n",
+      "Heap Push: 0.00026988983154296875\n",
+      "While Pop: 0.029254913330078125\n",
+      "Costs dict: 7.081031799316406e-05\n",
+      "Heap Push: 0.00018286705017089844\n",
+      "While Pop: 0.029785871505737305\n",
+      "Costs dict: 5.1975250244140625e-05\n",
+      "Heap Push: 0.00020194053649902344\n",
+      "While Pop: 0.03457498550415039\n",
+      "Costs dict: 3.5762786865234375e-05\n",
+      "Heap Push: 0.000164031982421875\n",
+      "While Pop: 0.02800726890563965\n",
+      "Costs dict: 3.314018249511719e-05\n",
+      "Heap Push: 0.00011014938354492188\n",
+      "While Pop: 0.02193617820739746\n",
+      "Costs dict: 2.9802322387695312e-05\n",
+      "Heap Push: 0.00010967254638671875\n",
+      "While Pop: 0.028256893157958984\n",
+      "Costs dict: 3.0994415283203125e-05\n",
+      "Heap Push: 0.00011992454528808594\n",
+      "While Pop: 0.020013809204101562\n",
+      "Costs dict: 2.5987625122070312e-05\n",
+      "Heap Push: 0.00015687942504882812\n",
+      "While Pop: 0.023485898971557617\n",
+      "Costs dict: 3.0994415283203125e-05\n",
+      "Heap Push: 0.00011181831359863281\n",
+      "While Pop: 0.01990485191345215\n",
+      "Costs dict: 4.792213439941406e-05\n",
+      "Heap Push: 0.0001418590545654297\n",
+      "While Pop: 0.021431922912597656\n",
+      "Costs dict: 3.1948089599609375e-05\n",
+      "Heap Push: 0.00011396408081054688\n",
+      "While Pop: 0.020977020263671875\n",
+      "Costs dict: 2.9087066650390625e-05\n",
+      "Heap Push: 0.00017309188842773438\n",
+      "While Pop: 0.02001214027404785\n",
+      "Costs dict: 2.9802322387695312e-05\n",
+      "Heap Push: 0.0001289844512939453\n",
+      "While Pop: 0.027321815490722656\n",
+      "Costs dict: 2.7894973754882812e-05\n",
+      "Heap Push: 0.00020623207092285156\n",
+      "While Pop: 0.022629976272583008\n",
+      "Costs dict: 5.4836273193359375e-05\n",
+      "Heap Push: 0.00021409988403320312\n",
+      "While Pop: 0.02542710304260254\n",
+      "Costs dict: 4.2438507080078125e-05\n",
+      "Heap Push: 0.00011491775512695312\n",
+      "While Pop: 0.02457904815673828\n",
+      "Costs dict: 3.075599670410156e-05\n",
+      "Heap Push: 0.00011539459228515625\n",
+      "While Pop: 0.02581501007080078\n",
+      "Costs dict: 6.794929504394531e-05\n",
+      "Heap Push: 0.0003380775451660156\n",
+      "While Pop: 0.02869415283203125\n",
+      "Costs dict: 4.887580871582031e-05\n",
+      "Heap Push: 0.00018787384033203125\n",
+      "While Pop: 0.03162097930908203\n",
+      "Costs dict: 5.0067901611328125e-05\n",
+      "Heap Push: 0.0002620220184326172\n",
+      "While Pop: 0.029803991317749023\n",
+      "Costs dict: 5.7220458984375e-05\n",
+      "Heap Push: 0.0002129077911376953\n",
+      "While Pop: 0.030204296112060547\n",
+      "Costs dict: 4.887580871582031e-05\n",
+      "Heap Push: 0.0002532005310058594\n",
+      "While Pop: 0.0386807918548584\n",
+      "Costs dict: 3.4809112548828125e-05\n",
+      "Heap Push: 0.0001327991485595703\n",
+      "While Pop: 0.029532194137573242\n",
+      "29.2 ms ± 2.83 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit dijkstra(graph, 0)"
    ]
@@ -108,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,6 +468,7 @@
     "    return [dijkstra(G,i),dijkstra(G,j)]\n",
     "\n",
     "\n",
+    "\n",
     "# 2*O(V)*O(E*logV) = O(E*V*logV) #\n",
     "def algo(G):\n",
     "    selected_vertices = random_start() #TODO np.array\n",
@@ -217,78 +506,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys([0, 2, 1, 3, 4, 5, 6])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "adjacency_list.keys()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 5, 1: 3, 2: 7, 3: 6, 4: 9, 5: 4}"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "populations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random as r\n",
     "\n",
@@ -298,20 +536,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(1,2)[0]"
    ]
