feat: optimize dijkstra

--- a/Dijkstra.ipynb
+++ b/Dijkstra.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,18 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dijkstra(G, source):\n",
-    "    \n",
-    "    #start_time = time.time()\n",
+    "    start_time1 = time.time()\n",
     "    costs = dict()\n",
     "    for i in range(number_of_vertices):\n",
     "        costs[i] = np.inf\n",
     "    costs[source] = 0\n",
-    "    #print(f\"Costs dict: {time.time() - start_time}\")\n",
+    "    #print(f\"Costs dict: {time.time() - start_time1}\")\n",
     "    \n",
     "    #start_time = time.time()\n",
     "    pq = []\n",
@@ -80,7 +79,6 @@
     "    for node in G:\n",
     "        heapq.heappush(pq, (node, costs[node]))\n",
     "    #print(f\"Heap Push: {time.time() - start_time}\")\n",
-    "    \n",
     "    \n",
     "    #start_time = time.time()\n",
     "    while len(pq) != 0:\n",
@@ -92,39 +90,41 @@
     "                costs[neighbor_node] = distance\n",
     "                heapq.heappush(pq, (neighbor_node, distance))\n",
     "    #print(f\"While Pop: {time.time() - start_time}\")\n",
-    "\n",
+    "    print(f\"Total Time: {time.time() - start_time1} sec\")\n",
     "    return np.sum(np.array(list(costs.values())) * np.array(list(populations.values())))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = G\n",
+    "\n",
+    "dijkstra(graph, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Costs dict: 4.100799560546875e-05\n",
-      "Heap Push: 0.000102996826171875\n",
-      "While Pop: 0.025828838348388672\n"
+      "Time: 0.00037288665771484375\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "19102547"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "graph = G\n",
+    "arr = np.random.rand(1000)*100\n",
     "\n",
-    "dijkstra(graph, 0)"
+    "start_time = time.time()\n",
+    "\n",
+    "np.sort(arr)\n",
+    "print(f\"Time: {time.time() - start_time}\")"
    ]
   },
   {
@@ -468,7 +468,6 @@
     "    return [dijkstra(G,i),dijkstra(G,j)]\n",
     "\n",
     "\n",
-    "\n",
     "# 2*O(V)*O(E*logV) = O(E*V*logV) #\n",
     "def algo(G):\n",
     "    selected_vertices = random_start() #TODO np.array\n",
@@ -488,7 +487,6 @@
     "#%timeit algo(G)\n",
     "#[algo(G) for i in range(20)]\n",
     "\n",
-    "\n",
     "algo(G)"
    ]
   },
@@ -502,45 +500,6 @@
     "lst2 = lst1.copy()\n",
     "lst2[0] = 99\n",
     "print(lst1[0]==lst2[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adjacency_list.keys()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "populations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random as r\n",
-    "\n",
-    "display(number_of_vertices,r.randint(0,number_of_vertices))\n",
-    "r.randint(0,number_of_vertices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(1,2)[0]"
    ]
   },
   {
