feat: modify Dijkstra

--- a/Dijkstra.ipynb
+++ b/Dijkstra.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import heapq\n",
     "import numpy as np\n",
     "from collections import defaultdict\n",
-    "import time"
+    "import time\n",
+    "from multiprocessing import Process"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,21 +53,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jax"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dijkstra(G, source):\n",
-    "    start_time1 = time.time()\n",
+    "    #start_time1 = time.time()\n",
     "    costs = dict()\n",
     "    for i in range(number_of_vertices):\n",
     "        costs[i] = np.inf\n",
@@ -90,15 +82,34 @@
     "                costs[neighbor_node] = distance\n",
     "                heapq.heappush(pq, (neighbor_node, distance))\n",
     "    #print(f\"While Pop: {time.time() - start_time}\")\n",
-    "    print(f\"Total Time: {time.time() - start_time1} sec\")\n",
+    "    #print(f\"Total Time: {time.time() - start_time1} sec\")\n",
     "    return np.sum(np.array(list(costs.values())) * np.array(list(populations.values())))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Heap Push: 8.797645568847656e-05\n",
+      "Total Time: 0.020029067993164062 sec\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "19102547"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "graph = G\n",
     "\n",
@@ -107,14 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.00037288665771484375\n"
+      "Time: 0.00032019615173339844\n"
      ]
     }
    ],
@@ -451,9 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 2.8942971229553223\n"
+     ]
+    }
+   ],
    "source": [
     "import random as r\n",
     "\n",
@@ -487,8 +513,90 @@
     "#%timeit algo(G)\n",
     "#[algo(G) for i in range(20)]\n",
     "\n",
-    "algo(G)"
+    "start_time = time.time()\n",
+    "algo(G)\n",
+    "print(f\"time: {time.time() - start_time}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 0.10499095916748047\n",
+      "time: 0.722801923751831\n",
+      "time: 0.7315418720245361\n",
+      "time: 0.7392277717590332\n",
+      "time: 0.7463009357452393\n",
+      "time: 0.7665247917175293\n",
+      "time: 0.7853677272796631\n",
+      "time: 0.7997970581054688\n",
+      "time: 0.8081929683685303\n",
+      "time: 0.8150098323822021\n",
+      "time: 0.8152027130126953\n",
+      "time: 0.8188936710357666\n"
+     ]
+    }
+   ],
+   "source": [
+    "p0 = Process(target=algo(G))\n",
+    "p1 = Process(target=algo(G))\n",
+    "p2 = Process(target=algo(G))\n",
+    "p3 = Process(target=algo(G))\n",
+    "p4 = Process(target=algo(G))\n",
+    "p5 = Process(target=algo(G))\n",
+    "p6 = Process(target=algo(G))\n",
+    "p7 = Process(target=algo(G))\n",
+    "p8 = Process(target=algo(G))\n",
+    "p9 = Process(target=algo(G))\n",
+    "p10 = Process(target=algo(G))\n",
+    "\n",
+    "\n",
+    "start_time = time.time()\n",
+    "p0.start()\n",
+    "p1.start()\n",
+    "p2.start()\n",
+    "p3.start()\n",
+    "p4.start()\n",
+    "p5.start()\n",
+    "p6.start()\n",
+    "p7.start()\n",
+    "p8.start()\n",
+    "p9.start()\n",
+    "p10.start()\n",
+    "\n",
+    "\n",
+    "p0.join()\n",
+    "p1.join()\n",
+    "p2.join()\n",
+    "p3.join()\n",
+    "p4.join()\n",
+    "p5.join()\n",
+    "p6.join()\n",
+    "p7.join()\n",
+    "p8.join()\n",
+    "p9.join()\n",
+    "p10.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 0.12424206733703613\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -526,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
